[gd_scene load_steps=14 format=3 uid="uid://dm1qorrlsmhr8"]

[ext_resource type="Script" path="res://ui/PauseMenu/PauseMenu.gd" id="1_rakll"]
[ext_resource type="Texture2D" uid="uid://bsj16eausjfkp" path="res://assets/backgrounds/forcefield_pattern.png" id="2_n2jtc"]
[ext_resource type="Script" path="res://ui/PauseMenu/CategoryButton.gd" id="3_y77um"]
[ext_resource type="PackedScene" uid="uid://cbjvmnq8kb75" path="res://ui/ButtonIcon/ButtonIcon.tscn" id="4_08e4p"]

[sub_resource type="LabelSettings" id="LabelSettings_hecc8"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eny6n"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_475h0"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6hn04"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_if8gd"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xkr3u"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y6tyr"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xbpao"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gf5ex"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rakll")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.305882, 0.796078, 0.760784, 0.196078)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n2jtc")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Categories" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Categories"]
layout_mode = 2
alignment = 1

[node name="ButtonLeft" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer" instance=ExtResource("4_08e4p")]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
expand_mode = 1
inputName = "ui_category_left"

[node name="CategoryButtons" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
alignment = 1

[node name="Status" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Status"
label_settings = SubResource("LabelSettings_hecc8")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Awakenings" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Awakenings"
label_settings = SubResource("LabelSettings_eny6n")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Skills" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Skills"
label_settings = SubResource("LabelSettings_475h0")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Equipment" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Equipment"
label_settings = SubResource("LabelSettings_6hn04")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Overview" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Overview"
label_settings = SubResource("LabelSettings_if8gd")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Inventory" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Inventory"
label_settings = SubResource("LabelSettings_xkr3u")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="SkillTrees" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Skill Trees"
label_settings = SubResource("LabelSettings_y6tyr")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Journal" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Journal"
label_settings = SubResource("LabelSettings_xbpao")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="Settings" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer/CategoryButtons"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_gf5ex")
horizontal_alignment = 1
clip_text = true
script = ExtResource("3_y77um")

[node name="ButtonRight" parent="MarginContainer/MarginContainer/VBoxContainer/Categories/HBoxContainer" instance=ExtResource("4_08e4p")]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
expand_mode = 1
inputName = "ui_category_right"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActualMenu" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HintSection" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="HintLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HintSection"]
unique_name_in_owner = true
layout_mode = 2
text = "> Text regarding the current option goes here."
